[gd_scene load_steps=2 format=3 uid="uid://dqew00eqnakod"]

[ext_resource type="Script" path="res://addons/dialoguecreator/Scripts/Nodes/DCDialogueNode.gd" id="1_df1nm"]

[node name="DialogueNode" type="GraphNode"]
offset_right = 470.0
offset_bottom = 367.0
size_flags_vertical = 3
mouse_filter = 1
resizable = true
title = "Dialogue"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.431373, 1, 0.858824, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color(0.894118, 0.784314, 0.509804, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.43, 1, 0.8575, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_df1nm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Character ID: "

[node name="CharacterID" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1e+06
value = -1.0
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "   "

[node name="AddTextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = " + "

[node name="MainTextEdit" type="TextEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
text = "{\"Eng\": \"Hodor.\"}"
wrap_mode = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddTextButton" to="." method="_on_add_text_button_pressed"]
